--- a/index.html
+++ b/index.html
@@ -1,14 +1,51 @@
 <!doctype html>
+<html lang="en-us">
 
-<html lang="eng-us">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About | Kyle LaMont</title>
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+</head>
 
-    <head>
-        <meta charset="UTF-8">
-    </head>
+<body>
 
-    <body>
-        <h1>This is my webpage.</h1>
-        <p>There are many like it,</p>
-        <p>but this one is mine</p>
-    </body>
+  <header id="masthead">
+    <div class="container">
+      <a href="index.html" id="logo">Kyle LaMont</a>
+      <nav>
+        <a href="index.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </div>
+  </header>
+
+  <div id="main-container" class="container">
+    <section class="main-section">
+      <h1>About Me</h1>
+
+      <img src="assets/images/me.jpg" class="auth-image" alt="Your Name">
+
+      <p>My name is Kyle LaMont. I am a 35 year old living in Seattle, WA. My pronouns are he/him. I have a 2 year old dog named Rory.</p>
+
+      <p>I graduated in 2007 from the University of Pittsburgh with a BS in Psychology. I then worked for a variety of companies in their customer service departments.</p>
+
+      <p>I am a web developer with strong skills in HTML, CSS, and Javascript. I enjoy problem solving, as well as creating things.</p>
+        
+      <p>In my previous career, I worked with customers to resolve their issues in an insurance setting by reading policies and applying them to claims and issues. As a developer, I use this same sound logic and meticulousness to rapidly resolve issues and build pages.</p>
+      
+      <p>I am looking for a new opportunity in development that will utilize these skills, as well as allow me to grow in the visual aspects of development.</p>
+
+    </section>
+
+  </div>
+
+  <footer>
+    <div class="container">
+      Copyright &copy; 
+    </div>
+  </footer>
+</body>
+
 </html>
