--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,8 @@
         <h3>Crystals Game</h3>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
+        <a href="https://kylerlamont.github.io/Trivia-Game/" target="_blank">
+        <img src="assets/images/questionman.jpg" alt="Trivia Game">
 
         <h3>Trivia Game</h3>
       </div>
