added gif assignment to portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -34,15 +34,21 @@
       </div>
       <div class="work">
         <a href="https://kylerlamont.github.io/unit-4-game/" target="_blank">
-        <img src="assets/images/redgem.jpg" alt="RPG Game"></a>
+        <img src="assets/images/redgem.jpg" alt="RPG Game">
 
-        <h3>Crystals Game</h3>
+        <h3>Crystals Game</h3></a>
       </div>
       <div class="work">
         <a href="https://kylerlamont.github.io/Trivia-Game/" target="_blank">
         <img src="assets/images/questionman.jpg" alt="Trivia Game">
 
-        <h3>Trivia Game</h3>
+        <h3>Trivia Game</h3></a>
+      </div>
+      <div class="work">
+        <a href="https://kylerlamont.github.io/Giftastic/" target="_blank">
+        <img src="assets/images/saturn.gif" alt="Gift Time!">
+  
+        <h3>Gif Time!</h3></a>
       </div>
       <div class="work">
         <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
@@ -54,6 +60,7 @@
 
         <h3>Rock Paper Scissors</h3>
       </div>
+
 
     </section>
 
