--- a/portfolio.html
+++ b/portfolio.html
@@ -54,9 +54,10 @@
         <h3>Gif Time!</h3></a>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
+        <a href="https://kylerlamont.github.io/Train-Time/" target="_blank">
+        <img src="assets/images/toy-train.png" alt="Train Time">
 
-        <h3>Rutgers Info Widget</h3>
+        <h3>Train Time</h3></a>
       </div>
       <div class="work">
         <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
