--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
 
                     <ul class="no-list social-list-1">
                         <li>Connect</li>
+                        <li><a href="https://github.com/KyleRLamont" target="_blank" class="social-github"></a></li>
                         <li><a href="https://www.facebook.com/kylelamont" target="_blank" class="social-facebook"></a></li>
                         <li><a href="https://www.linkedin.com/in/kyle-lamont" target="_blank" class="social-linkedin"></a></li>
                     </ul>
